...
     since: 28 Apr. 2019
!-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calendar_area_background"
    android:clickable="true"
    android:onClick="clickBlankSpace"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendar_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:onClick="clickBlankSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
                    android:id="@+id/button03"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
                    android:id="@+id/button33"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_3">

                <Button
                    android:id="@+id/button40"
                    android:layout_width="@dimen/size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_weight="1"
                    android:background="@drawable/empty_grid" />

                <Button
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/color_bar_area">

                <ImageButton
                    android:id="@+id/clear_button"
                    android:layout_width="@dimen/double_size_unit"
                    android:layout_height="@dimen/double_size_unit"
                    android:layout_marginStart="24dp"
                    android:background="@null"
                    android:onClick="clearGrid"
                    app:layout_constraintStart_toEndOf="@id/remove_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_round_cancel_24px" />

                <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="@dimen/double_size_unit"
                    android:layout_height="@dimen/double_size_unit"
                    android:background="@null"
                    android:onClick="activityLevelUp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/coding_activity"
                    android:textColor="@color/holder_1_level_3"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/color_bar_2"
                    app:layout_constraintTop_toBottomOf="@+id/status_description0" />

                <Button
                    android:id="@+id/color_bar_2"
                    android:layout_width="@dimen/double_size_unit"
                    android:layout_height="@dimen/size_unit"
...
                    android:textColor="@color/workout_level_3"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/color_bar_0"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/color_bar_1"
                    android:layout_width="@dimen/double_size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/color_bar"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toStartOf="@+id/status_description2"
...
                    android:background="@drawable/color_bar"
                    android:textSize="8sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/color_bar_3"
                    android:layout_width="@dimen/double_size_unit"
                    android:layout_height="@dimen/size_unit"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/color_bar"
                    android:textSize="8sp"
...
